--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,13 @@ justify-content: center;
 font-size: 36px;
 }
 
+header nav ul li a:hover {
+    border:2px solid var(--background-color2);
+}
+.projects-page .img1 .project2-img button:hover {
+    border: 3px solid yellow;
+}
+
 /* Media query for smaller desktop screens and smaller */
 @media screen and (max-width:980px) {  
     header {
